--- a/form.html
+++ b/form.html
@@ -35,14 +35,15 @@
         <input type="text"  name="Email" id="id2" value="b" required style="width: 95%;  margin-left: 1%;"/><br>
         <label>Phone</label><br>
         <input type="text" name="Phone" id="id3" value="c" required style="width: 95%;  margin-left: 1%;"/><br>
-        <div>
+        <!-- <div>
             <label>Time for Call</label><br>
             <input type="date" name="" id="id4" value="2020-12-12" style="width:50%;  margin-left: 1%;">
             <input type="time" name="" id="id5" value="11:30" style="width: 44%;" >
-        </div><br>
+        </div><br> -->
         
         <input onclick="onsignup()" type="button" value="Get a call" style=" margin-left: 1%;color:white; background-color: #ffa500; width: 97%; border-style: hidden; margin-bottom: 2%; border-radius: 2px ;">
         <br>
     </form>
+    <ul id="list-items"></ul>
 </body>
 </html>
